--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,11 @@
 }
 
 .main__slider {
+	max-width: 100%;
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: space-between;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	padding: 107px 135px 125px;
 }
 
@@ -27,7 +28,6 @@
 
 .main__h1-block {
 	position: relative;
-
 }
 
 .main__h1 {
@@ -46,6 +46,11 @@
 	font-size: 14px;
 	color: #FFFFFF;
 	line-height: 170%;
+}
+
+.main__text_width-95 {
+	max-width: 95px;
+	height: 45px;
 }
 
 .main__text_margin-top-bot {
@@ -107,6 +112,11 @@
 	cursor: pointer;
 }
 
+.main__slider-img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 .main__dot:hover,
 .main__slider-img-active_dots {
 	content: url("../icons/dot-start.svg");
@@ -114,6 +124,13 @@
 
 .main__arrow {
 	cursor: pointer;
+}
+
+.main__slider-right {
+	width: 50%;
+	max-width: 50%;
+	display: flex;
+	flex-direction: column;
 }
 
 .main__title-slider {
@@ -143,13 +160,15 @@
 
 .main__slider-img-item {
 	display: none;
-	width: 680px;
-	height: 483px;
 }
 
 .main__slider-img-active {
 	display: block;
 	margin-top: 45px;
+	max-width: 100%;
+	height: auto;
+	/*max-width: 679px;*/
+	/*max-height: 483px;*/
 }
 
 .main__slider-img-active_dots {
